# Vault

./: Cargo.toml  README.md  TODO.md  pyproject.toml  requirements.txt  rest_api.py
src/: auth.rs  lib.rs  observer.rs  secret_engine.rs  shared_structs.rs
src/secret_engine/: kv_secret_engine.rs
