[package]
name = "Vault"
version = "0.1.0"
edition = "2021"
description = "Hashicorp vault written in Rust and Python (REST API). Aimed to have better audit system."
authors = ["Lev Lobanov <lev.lobanov.g@yandex.ru>", "Vadim Evseyev"]
readme = "README.md"
licence = "MIT"

[lib]
name = "vault"
crate-type = ["cdylib"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["alloc"] }
anyhow = "1.0.89"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
crypto = { version = "0.5.1", features = ["aead"] }
mongodb = "3.1.0"
pyo3 = "0.22.0"
rand = "0.8.5"
ring = "0.17.8"
serde = "1.0.210"
serde_json = "1.0.129"
serde_with = { version = "3.11.0", features = ["base64"] }
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
zeroize = "1.8.1"
